--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@
 
     <h1>RealAnimeCount</h1>
     <div class="subtitle">
-         Stop counting every sequel separately.
+         Count every sequel separately.
     </div>
 
     <div class="about">
@@ -246,4 +246,5 @@
 </div>
 </body>
 </html>
+
 
